# galerkin-rs

./: .travis.yml  Cargo.toml
cl-funcs/: Cargo.toml
cl-funcs/src/: lib.rs
cl-structs/: Cargo.toml
cl-structs-derive/: Cargo.toml
cl-structs-derive/src/: lib.rs  model.rs
cl-structs/src/: lib.rs
cl-structs/tests/: tests.rs
cl-structs/tests/compile-fail/: cl_func_on_non_func.rs  ocl_prm_derive_non_f32_test.rs
cl-structs/tests/run-pass/: cl_func.rs  ocl_prm_derive_test.rs
examples/1d/: advec.rs  maxwell.rs
examples/2d/euler/: flux.rs  main.rs  unknowns.rs
examples/2d/maxwell/: flux.rs  main.rs  unknowns.rs
galerkin/: Cargo.toml
galerkin/examples/1d/: advec.rs  maxwell.rs
galerkin/examples/2d/euler/: flux.rs  main.rs  unknowns.rs
galerkin/examples/2d/maxwell/: flux.rs  main.rs  unknowns.rs
galerkin/examples/opencl/1d/: advec.rs
galerkin/src/: blas.rs  lib.rs
galerkin/src/distmesh/: distmesh_2d.rs  mesh.rs
galerkin/src/functions/: gamma.rs  jacobi_polynomials.rs  mod.rs  vandermonde.rs
galerkin/src/galerkin_1d/: flux.rs  galerkin.rs  grid.rs  operators.rs  unknowns.rs
galerkin/src/galerkin_2d/: flux.rs  galerkin.rs  grid.rs  mod.rs  operators.rs  reference_element.rs  unknowns.rs
galerkin/src/grid/: element.rs
galerkin/src/opencl/: arrays.rs  mod.rs
galerkin/src/opencl/galerkin_1d/: advec.rs  flux.rs  galerkin.rs  grid.rs  mod.rs  operators.rs  unknowns.rs
galerkin/src/plot/: glium.rs  glium_test.rs  mod.rs  plot2d.rs  plot3d.rs
galerkin/src/testing/: assertions.rs
ocl-macro/: Cargo.toml
ocl-macro-test/: Cargo.toml
ocl-macro-test/src/: lib.rs
ocl-macro/src/: lib.rs  unknowns.rs
src/: blas.rs  lib.rs
src/distmesh/: distmesh_2d.rs
src/functions/: gamma.rs  jacobi_polynomials.rs  range_kutta.rs  vandermonde.rs
src/galerkin_1d/: grid.rs  mod.rs  unknowns.rs
src/galerkin_2d/: flux.rs  grid.rs  operators.rs  reference_element.rs  unknowns.rs
src/plot/: glium.rs  mod.rs  plot2d.rs  plot3d.rs
src/testing/: mod.rs
static/meshes_2d/: isentropic_vortex_points  isentropic_vortex_triangles
