[package]
name = "cl-structs-derive"
version = "0.1.0"
authors = ["Jack Coughlin <johnbcoughlin@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[build]
rustflags = '--cfg procmacro2_semver_exempt'

[dependencies]
ocl = "0.19.1"
proc-macro2 = {version = "0.4.24", features = ["nightly"]}
syn = {version = "0.15.22", features = ["full", "extra-traits"]}
quote = "0.6"

