[package]
name = "galerkin"
version = "0.1.0"
authors = ["Jack Coughlin <johnbcoughlin@gmail.com>"]

[dependencies]
clippy = {version = "*", optional = true}

num = "0.1"
rulinalg = "0.4.2"

rand = "0.5.5"

ocl = "0.19.1"

# See https://github.com/blas-lapack-rs/blas-lapack-rs.github.io/wiki

## Wrappers
blas = "0.20.0"
lapack = "0.16.0"

## Bindings
blas-sys = "0.7.1"
lapack-sys = "0.12.1"

## Sources
blas-src = "0.2.1"
lapack-src = "0.2.1"

gnuplot = "0.0.26"
rtriangulate = "0.3"

tempfile = "3.0.3"
itertools = "0.7.8"

glium = "0.22.0"

[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = "0.3.1"

[target.'cfg(target_os = "linux")'.dependencies]
openblas-src = "0.6.1"

[profile.release]
debug = true

[lib]
name = "galerkin"
path = "src/lib.rs"

[[bin]]
name = "glium-test"
path = "src/plot/glium_test.rs"

[[bin]]
name = "advec-1d"
path = "examples/1d/advec.rs"

[[bin]]
name = "maxwell-1d"
path = "examples/1d/maxwell.rs"

[[bin]]
name = "maxwell-2d"
path = "examples/2d/maxwell/main.rs"

[[bin]]
name = "euler-2d"
path = "examples/2d/euler/main.rs"
